--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 div {
-  border: 1px solid Chocolate;
+  xborder: 1px solid Chocolate;
 }
 
 /* HTML5 display definitions
@@ -430,3 +430,15 @@ td,
 th {
   padding: 0;
 }
+
+/* Navigation Section */
+.top-navigation {
+  background-color: #fff;
+}
+.top-navigation > .content {
+  width: 970px;
+  height:70px;
+  margin: 0 auto;
+}
+
+
