--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
@@ -461,16 +468,17 @@ body {
 
 .content > .links {
   float: right;
+
 }
 .links > li {
   display: inline-block;
-  margin-left: 2em;
+  margin-left: 25px;
   margin-top: .5em;
 }
 
 .top-navigation .links > .active {
   color: #4c5058;
-  font-weight: 600;
+  font-weight: 500;
 }
 .top-navigation .links li:hover {
   cursor: pointer;
