--- a/css/style.css
+++ b/css/style.css
@@ -539,3 +539,15 @@ body {
   font-size: 2.7rem;
 
 }
+
+.cases .devices {
+  width: 20%;
+  margin-left: 15%;
+  margin-right: -150px;
+   display: inline-block;
+  /* styles to assist with debugging */
+  border: 1px solid black;
+  box-sizing: border-box;
+  height: 4em;
+  text-align: center;
+}
